--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import "./node_modules/@powerhousedao/design-system/dist/style.css";
-@import "tailwindcss";
+@import "tailwindcss" source(".");
 
 @theme {
   /* You can customize the theme by overriding the theme variables here */
